--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -151,13 +151,12 @@
     For our project, the information we will need includes the flight path of the Apollo 11 as well as orbital mechanics for the Apollo 11 and solar system. 
 
     \subsection{Interface Viewpoint}
-    %How we want the end-product to work
-        % .exe file? Blender? Unity?
+       
+       The 3D animation will be compiled into an executable file (.exe) so that the user can open the whole animation from one file. Then, the user will be able to start and stop the animation using a keyboard, and change their viewpoint by clicking and dragging their mouse, or choose set viewpoints using the keyboard. If the user does not want to change the viewpoint, the viewpoint will be set to default viewing positions that our group has chosen. The user will be able to view the video from outside of the spacecraft, inside the spacecraft, on the moon, and on Earth. As the animation progresses, there will be functionality for the user to step back or forward through the animation, and possibly jump to pre-defined points in the flight path.
+
         
     \subsection{Interaction Viewpoint}
-    For our project, the audience will have the option to change the viewpoint of the scene. If the audience does not want to change the viewpoint, the viewpoint will stay at the default viewing positions that our group has chosen. If the audience wishes to change the viewpoint, they will be able to press keys on a keyboard to switch between viewpoints. The audience will be able to view the video from outside of the spacecraft, inside the spacecraft, on the moon, and on Earth.
-    % People can just watch, or use mouse/keyboard to move viewpoint
-    % What's the mouse/keyboard going to do?
+    %Is this section actually applicable? Our entities dont really interact...
     
     \subsection{Resources Viewpoint}
     To obtain the audio of the transmissions between the Apollo 11 crew and Tranquility Base, we will use NASA's archive of audio files from the Apollo 11 mission.
