--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -148,7 +148,7 @@
     
     \subsection{Information Viewpoint}
     %The physics, math, numbers, etc.
-    For our project, the information we will need includes the flight path of the Apollo 11 as well as orbital mechanics for the Apollo 11 and solar system. 
+    For our project, the information we will need includes the flight path of the Apollo 11 as well as orbital mechanics for the Apollo 11 and solar system. The moon and Apollo 11 will follow orbital mechanics because it is integral to the flight path of the Apollo 11. Our group needs to accurately recreate the flight path in order to make our video as realistic as possible. If the flight path were incorrect, audience members would be wrongly informed about the Apollo 11 mission.
 
     \subsection{Interface Viewpoint}
        
