--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -68,8 +68,9 @@
         }
         \begin{abstract}
         % 6. Fill in your abstract   
-        %NOTE: this is the same as Rquirement doc, lets change this
-      Our group, The Apolloers, is working with Mike Bailey to create a 3D animation about the Apollo 11 Moon Landing. This animation will be put on display in OMSI during the Summer of 2019 for the 50th anniversary of the Apollo 11 mission. All parts of the mission will be included, from Earth Launch to Earth landing, and all sections in between. This document breaks the project into requirements that we will use to guide our project through the development process. 
+    
+Next Summer, the Summer of 2019, will be the 50th anniversary of the Apollo 11 Moon Landing and our group, `The Apolloers', is working to create a 3D animation of the mission. This animation is being made for Jim Todd at OMSI so that we can display the animation in the museum as part of their 50th anniversary exhibit. This document will show how we have organized the project and offer different design viewpoints so that stakeholders can see how the project has been structured. 
+
         \end{abstract}     
     \end{singlespace}
 \end{titlepage}
@@ -86,17 +87,28 @@
 
 \section{Overview}
        \subsection{Scope}
-        This document focuses on the 3D animation for the Apollo 11 Mission that will be created by our group, "The Apolloers" for display at OMSI. The design principals of the project will be outlined here, as well as design elements, such as functionality, usability, requirements, and more. 
+        This document focuses on the 3D animation for the Apollo 11 Mission that will be created by our group, "The Apolloers" for display at OMSI. The design principals of the project will be outlined here, as well as design elements, such as functionality, usability, requirements, and more. %MORE HERE
         
     \subsection{Purpose}
-        The design of our 3D animation will be outlined throughout this document. While this document will be updated throughout the year, it will start as an outline of how we will be implementing the 3D animation throughout the year. 
+        The design and structure of this project will be outlined so that readers would be able to understand how the 3D animation is organized from a development viewpoint. In addition to the readers, this document will also serve as guidelines for our group to follow throughout the year. This document will be changed throughout the year as we refine our design. 
 
     \subsection{Intended Audience}
-        This document is for people that are looking for a technical outline of how our 3D animation will be implemented. Some main takeaways of this document are the design, structure, and connectivity of the components of our project.
+        This document is intended for the stakeholders of this Apollo 11 3D animation, as well as any interested group that would like to know more about how the animation is structured. Some main takeaways of this document are the design, structure, and connectivity of the components of our animation, so that readers would have a general idea of how to make a similarly structured project. 
 
 \section{Definitions}
-%Make this a list, check with Richard about using a table
--OMSI: Oregon Museum of Science and Industry
+%Alphabetize this table!!!
+\begin{table}
+\begin{tabular} {|l|l|}
+\hline
+OMSI & Oregon Museum of Science and Industry 	\\ \hline
+SDK & S 																						\\ \hline
+Apollo 11 & A 																						\\ \hline
+OpenGL & O 																						\\ \hline
+NASA & N 																						\\ \hline
+Graphics Pipeline & 														\\ \hline
+
+\end{tabular}
+\end{table}
 \section{Conceptual Model}
 %Mini-requirements doc
     \subsection{}
@@ -121,7 +133,7 @@
     \subsection{Design Languages}
 
 
-% Richard, Do we need to do ALL viewpoints, or is what we have ok?
+
 \section{Design Viewpoints}
 
     \subsection{Context Viewpoint}
@@ -163,7 +175,6 @@
     
     To obtain the audio for the sound effects in our project, our group will download audio files from free online sound effects libraries. We will only need two audio files for sound effects, one for the splash of the splashdown and another for the roar of the Saturn 5 rockets. Like the audio files obtained from NASA's archive, the audio will be implemented in a 3D space using OpenAL. 
     % where are we getting 3-D objects, audio files, etc.
-
 
 \section{Conclusion}
 
