--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -118,16 +118,24 @@ Graphics Pipeline & 														\\ \hline
     \subsection{Design Stakeholders}
     The stakeholders for our project are OMSI as well as the audiences who will be viewing our video. The educational and technical quality of our video will reflect on OMSI. Our group will also be using a storyboard created by some of OMSI's staff to base the video's narrative off of, so OMSI will also have influence over how this video is created. The planetarium audiences will also be affected by the technical and educational quality of our video. If the video is more entertaining than educational, then the audience will not understand the impact and ambition of the Apollo 11 mission. If the video is more educational than entertaining, then the audience will be bored and less likely to pay attention to the content of the video.
     \subsection{Design Views}
+    %Is our view the whole project?
+    
     \subsection{Design Viewpoints}
+    The Apollo 11 animation project can be broken into different viewpoints that can all be used to describe the animation. We have broken the project into the following: Context, Composition, Logical, Dependency, Information, Interface, Interaction, and Resources viewpoints. Each of these viewpoints aim to provide an answer to various questions proposed by the project such as: what will the animation consist of, how will data be stored and used, how will users interact with the project, etc. 
+    
     \subsection{Design Elements}
-     The elements of our project include:
-    - OpenGL
-    - OpenAL
-    - Orbital mechanics
-    - 3D models of .....
-    - Audio files of the mission transmissions and sound effects
-    - Textures for our 3D models
-    - Lighting 
+    There are many elements of a 3D animation that all need to work with the other elements to produce a quality project. Programming platforms such as OpenAL and OpenGL will be used for managing the other elements relating to 3D graphics and audio respectively. OpenAL will be used to work with audio files from the transmissions from the mission, as well as various sound effects that will be included to immerse the audience. 
+    
+    The programming in OpenGL will dictate what 3D objects are in the project, where they are in the scene, and how they look. Many 3D objects in our project will come from an online repository, which we may need to add textures to, which would also be found online. Once the 3D object is in the scene, different lighting features will be programmed in to account for the Sun and that light reflecting off of the other objects. Animating the objects will require use of real physics and orbital mechanics applied to the objects to provide realistic movement. 
+    
+%   The elements of our project include:
+%    - OpenGL
+%    - OpenAL
+%    - Orbital mechanics
+%    - 3D models of .....
+%    - Audio files of the mission transmissions and sound effects
+%    - Textures for our 3D models
+%    - Lighting 
     \subsection{Design Overlays}
     \subsection{Design Rationale}
     \subsection{Design Languages}
