--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -100,12 +100,15 @@ Next Summer, the Summer of 2019, will be the 50th anniversary of the Apollo 11 M
 \begin{table}
 \begin{tabular} {|l|l|}
 \hline
-OMSI & Oregon Museum of Science and Industry 	\\ \hline
-SDK & S 																						\\ \hline
-Apollo 11 & A 																						\\ \hline
-OpenGL & O 																						\\ \hline
-NASA & N 																						\\ \hline
-Graphics Pipeline & 														\\ \hline
+Term & definition \\ \hline
+API & An Application Programming Interface is a set of protocols and tools that are used to build a software application. Essentially the `building blocks' that a programmer uses to build an application.  \\ \hline
+Apollo 11 Mission & A spaceflight operated by NASA to land the first humans on the Moon, launched July 16th, 1969.  \\ \hline
+Graphics Pipeline & A conceptual model that describes the steps that a graphics system needs to perform in order to render a 3D scene. \\ \hline
+NASA & The National Aeronautics and Space Administration is a federal agency that focuses on research and development related to air and space.	\\ \hline
+OMSI & The Oregon Museum of Science and Industry, located in Portland, Oregon	\\ \hline
+OpenAL & An open-source audio library API that is based off of OpenGL so that audio can be implemented with a 3D render in a familiar fashion as OpenGL. \\ \hline
+OpenGL & An open-source graphics library API that is used to interact with graphics hardware to design 3D renderings.	\\ \hline
+SDK & A Software Development Kit is a set of tools that program developers use to write programs for an application. \\ \hline
 
 \end{tabular}
 \end{table}
