--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -167,7 +167,7 @@ SDK & A Software Development Kit is a set of tools that program developers use t
 
     Some texturing will need to change depending on where the viewpoint is. A main example is that we don't want to use incredibly detailed textures for the Moon when the rocket has barely left Earth, and vice versa. We can have the textures change depending on distance, but this change should not be noticeable to the viewer.
     
-    Our audio triggers will be dependant on what point in the mission we are at, such as audio at launch, leaving the atmosphere, landing on the moon, etc. 
+    Our audio triggers will be dependant on what point in the mission the video is at. For example, the audio for the Saturn 5 rockets will be triggered during the launch phase of the mission. The volume of the audio will also depend on what viewpoint is currently being used. If the viewpoint is outside of the Apollo 11, the conversations between Tranquility Base and the Apollo 11 will be at a lower volume than if the viewpoint was inside of the Apollo 11.
     
     \subsection{Information Viewpoint}
     %The physics, math, numbers, etc.
