Added the rationale behind our project.

--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -151,6 +151,7 @@ SDK & A Software Development Kit is a set of tools that program developers use t
 	\subsubsection{Planetarium SDK}
 	One of our biggest stretch goals is to manage to pipe in our animation into one of their planetariums. We suspect that their planetariums use some type of SDK to interpolate subsections or FOV's into smaller chunks, we just don't have access to their SDK. The SDK is probably within the hands of the company that built the planetarium for OMSI, and will probably need some negotiation to get our hands on it. 
     \subsection{Design Rationale}
+	The basic rationale of our project is that setting the scene correctly is the most important factor in making this animation the best it can be. The Earth, Moon, and Sun need to be in the right position and the camera (or Eye) needs to be in the right position to reflect that. The lighting from the sun needs to be accurate as it reflects and refracts off the lunar capsule, moon, and Earth. The small details matter the most, such as the Earth having its iridescent glow thats given off by its atmosphere, or both planetoids having a dark and a light side. All of these combined truly create the scene, the flight path is the simpliest part, but making it feel like the Apollo 11 mission is the hardest.
     \subsection{Design Languages}
 
 
