Added design languages, which is basically c++

--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -153,7 +153,7 @@ SDK & A Software Development Kit is a set of tools that program developers use t
     \subsection{Design Rationale}
 	The basic rationale of our project is that setting the scene correctly is the most important factor in making this animation the best it can be. The Earth, Moon, and Sun need to be in the right position and the camera (or Eye) needs to be in the right position to reflect that. The lighting from the sun needs to be accurate as it reflects and refracts off the lunar capsule, moon, and Earth. The small details matter the most, such as the Earth having its iridescent glow thats given off by its atmosphere, or both planetoids having a dark and a light side. All of these combined truly create the scene, the flight path is the simpliest part, but making it feel like the Apollo 11 mission is the hardest.
     \subsection{Design Languages}
-
+	C++ is going to be our design language solely because all of the OpenGL librarys are in C++. Besides that, C++ is rather syntactically sound. It gives the programmer alot of control over what he wants to do, but on the flip side this allows the programmer to make alot of mistakes. It is rather efficient and fast like its older brother, C, but adopts less of the "aiming a shotgun at your foot without safety on" style like C, but has more backend librarys that can help the programmer achieve what he is trying to do, although this affects efficiency and control that the programmer has over what he is doing, but due to the scope of the project, this affect is rather minimal. 
 
 
 \section{Design Viewpoints}
