--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -103,6 +103,8 @@ Term & definition \\ \hline
 API & An Application Programming Interface is a set of protocols and tools that are used to build a software application. Essentially the `building blocks' that a programmer uses to build an application.  \\ \hline
 Apollo 11 Mission & A spaceflight operated by NASA to land the first humans on the Moon, launched July 16th, 1969.  \\ \hline
 Graphics Pipeline & A conceptual model that describes the steps that a graphics system needs to perform in order to render a 3D scene. \\ \hline
+High Poly & When a 3D model is created using many polygons, resulting in the model to have many fine details \\ \hline
+Low Poly & When a 3D model is created using few polygons, resulting in the model to have little detail \\ \hline
 NASA & The National Aeronautics and Space Administration is a federal agency that focuses on research and development related to air and space.	\\ \hline
 OMSI & The Oregon Museum of Science and Industry, located in Portland, Oregon	\\ \hline
 OpenAL & An open-source audio library API that is based off of OpenGL so that audio can be implemented into a 3D render in a similar fashion to OpenGL. \\ \hline
