--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -140,7 +140,7 @@ SDK & A Software Development Kit is a set of tools that program developers use t
     \subsection{Design Overlays} %Any additional information on certain viewpoints.
 	
 	\subsubsection{Textures and 3D Models}
-	Most of these textures will come from the NASA websites, which are readily available for everyone to use. Do note that these textures are high poly textures, and are rather accurate as they can be for just being a picture. The 3D model of the Saturn 5 will come from somewhere else, probably from some model sharing site, there is millions of models made within the modeling community, making it highly probable that someone has already made the Saturn 5 3D model. If we cannot find a low poly 3D model of the Saturn 5, we must settle for a high poly model, or maybe will have to make one ourselves. If we are left with a high poly 3D model, we must separate the more fine details from the model in attempt to reduce increase in our polygon budget. Our last choice is to make it ourselves, in this case the project will take more time due to more allocation of time to finish the 3D model.
+	Most of these textures will come from the NASA websites, which are readily available for everyone to use. Do note that these textures are high poly textures, and are extremely accurate. The 3D model of the Saturn 5 will come from somewhere else, most likely a model sharing site. If we cannot find a low poly 3D model of the Saturn 5, we must settle for a high poly model or make one ourselves. If we are left with a high poly 3D model, we must separate the more fine details from the model in attempt to reduce our polygon budget. Our last choice is to make it ourselves, in this case the project will take more time due to more allocation of time to finish the 3D model.
 	
 	\subsubsection{The Flight Path}
 	In terms of the flight path, optimally we would want a dataset of the whole flight and back, it is very easy to convert flight data into a virtual path instead of calculating and predicting the path through the use of initial and final variables. If it turns out that we cannot find any dataset for the flight, we can calculate the flight path in a similar amount of time, but will require us to sit down and research orbital mechanics. 
