--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -110,6 +110,7 @@ OMSI & The Oregon Museum of Science and Industry, located in Portland, Oregon	\\
 OpenAL & An open-source audio library API that is based off of OpenGL so that audio can be implemented into a 3D render in a similar fashion to OpenGL. \\ \hline
 OpenGL & An open-source graphics library API that is used to interact with graphics hardware to design 3D renderings.	\\ \hline
 SDK & A Software Development Kit is a set of tools that program developers use to write programs for an application. \\ \hline
+Polygon Count & Refers to the number of polygons in a scene. The more polygons in the scene, the more time it takes for the scene to be executed, often resulting in lag. \\ \hline
 
 \end{tabular}
 
